# modMake

./: .gitmodules  CMakeLists.txt  README.md
src/: config.hpp  main.cpp  util.hpp
src/util/: createArchive.cpp  createTarget.cpp  filterSrcs.cpp  getSrcFiles.cpp  init.cpp  util.cpp
